I know I shouldn't write a generic commit message

--- a/.eslintrc
+++ b/.eslintrc
@@ -2,7 +2,8 @@
     "root": true,
     "env": {
         "es6": true,
-        "browser": true
+        "browser": true,
+        "commonjs": true
     },
     "parser": "@typescript-eslint/parser",
     "parserOptions": {
@@ -12,6 +13,7 @@
     "extends": ["eslint:recommended", "plugin:@typescript-eslint/recommended"],
     "plugins": ["@typescript-eslint"],
     "rules": {
+        "@typescript-eslint/no-use-before-define": "off",
         "accessor-pairs": "error",
         "array-bracket-newline": [
             "error",
@@ -94,7 +96,7 @@
         "no-this-before-super": "warn",
         "no-trailing-spaces": "error",
         "no-unneeded-ternary": "warn",
-        "no-use-before-define": "error",
+        "no-use-before-define": "off",
         "no-useless-computed-key": "error",
         "no-useless-constructor": "error",
         "no-useless-return": "warn",
