--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,5 +4,5 @@
         "sourceMap": true,
         "removeComments": true
     },
-    "include": ["src/*.ts", "src/helpers/residuos.ts", "src/helpers/constants.ts", "src/helpers/state.ts", "src/helpers/helpers.ts"]
+    "include": ["src/*.ts", "src/helpers/residuos.ts", "src/helpers/constants.ts", "src/state.ts", "src/helpers/helpers.ts", "src/observers/InformacoesUsuarioObserver.ts", "src/observers/ServicoSelectorObserver.ts", "src/observers/ResiduosObserver.ts", "src/observers/ModeObserver.ts", "src/observers/IndustriaSelectorObserver.ts", "src/observers/CalculoMontanteObserver.ts", "src/observers/GenericObserver.ts", "src/observers/Observer.ts", "src/observers/GlobalState.ts"]
 }
