--- a/.eslintrc
+++ b/.eslintrc
@@ -37,7 +37,7 @@
         "comma-style": ["error", "last"],
         "computed-property-spacing": "error",
         "consistent-this": ["error", "self"],
-        "curly": "error",
+        "curly": ["error", "multi", "consistent"],
         "dot-location": ["error", "property"],
         "dot-notation": "error",
         "eol-last": ["warn", "always"],
@@ -104,7 +104,7 @@
         "no-var": "error",
         "no-whitespace-before-property": "error",
         "no-with": "error",
-        "nonblock-statement-body-position": ["error", "beside"],
+        "nonblock-statement-body-position": ["error", "below"],
         "one-var": ["error", "never"],
         "object-curly-spacing": ["warn", "always"],
         "object-shorthand": "error",
