--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,8 @@
 {
     "compilerOptions": {
-        "target": "ES2020",
-        "sourceMap": true,
-        "removeComments": true
+        "target": "es2020",
+        "removeComments": true,
+        "sourceMap": true
     },
     "include": ["src/**/*.ts"]
 }
