--- a/.eslintrc
+++ b/.eslintrc
@@ -104,7 +104,7 @@
         "no-var": "error",
         "no-whitespace-before-property": "error",
         "no-with": "error",
-        "nonblock-statement-body-position": ["error", "below"],
+        // "nonblock-statement-body-position": ["error", "below"],
         "one-var": ["error", "never"],
         "object-curly-spacing": ["warn", "always"],
         "object-shorthand": "error",
